Use node-modules (open-color, include-media)

--- a/src/SassComponent.scss
+++ b/src/SassComponent.scss
@@ -4,7 +4,10 @@
   display: flex;
   .box {
     // 일반 CSS에서는 .SassComponent .box
-    background: red;
+    background: $oc-gray-2;
+    @include media('<768px') {
+      background: $oc-gray-9;
+    }
     cursor: pointer;
     transition: all 0.3s ease-in;
     &.red {
