--- a/src/CSSModule.module.scss
+++ b/src/CSSModule.module.scss
@@ -11,22 +11,23 @@ body {
   padding: 1rem;
   color: white;
   font-size: 2rem;
-}
-
-.inverted {
-  color: black;
-  background: white;
-  border: 1px solid black;
+  &.inverted {
+    color: black;
+    background: white;
+    border: 1px solid black;
+  }
 }
 
 /* 글로벌 CSS 작성 */
 
-:global .something {
-  font-weight: 800;
-  color: aqua;
+:global {
+  .something {
+    font-weight: 800;
+    color: aqua;
+  }
 }
 
 /* 
-위 클래스들은 스타일을 직접 불러온 컴포넌트 내부에서만 작동한다. 
-만약 특정 클래스가 웹 페이지에서 전역적으로 사용된다면 :global을 앞에 입력한다.
+CSS Module에서 글로벌 클래스를 정의할 때 :global을 사용한 것처럼
+CSS Module이 아닌 .css/.scss 파일에서도 :local을 사용하여 CSS Module을 사용할 수 있다.
 */
